--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,11 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3"
-actix-cors = "0.3.0"
+actix-web = "4.3.1"
+actix-cors = "0.6.0-beta.4"
+actix-rt = "2.8.0"
+actix-ws = "0.2.0"
 dotenv = "0.15.0"
-reqwest = { version = "0.10.9", features = ["blocking"] }
-# rocket = "=0.5.0-rc.3"
-tokio = "0.2"
+env_logger = "0.10.0"
+reqwest = { version = "0.11.18", features = ["blocking"] }
+tokio = "1.23.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
