--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -8,5 +8,9 @@ edition = "2021"
 [dependencies]
 yew = { version = "0.20", features = ["csr"] }
 gloo-net = "0.2"
+gloo-console = "0.2.3"
 serde = { version = "1.0", features = ["derive"] }
 wasm-bindgen-futures = "0.4"
+wasm-bindgen = "0.2.87"
+futures = "0.3.28"
+web-sys = "0.3.0"
